tests/invalidTest/other/unary_not_bool.q
# EXPECT ! with non-bool
def void errorTest(){
    uint64 a = 2
    if !a
    then a = 1
}